Implement image uploads

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= movie.title %></td>
         <td><%= movie.director.created_at %></td>
-        <td><%= movie.image %></td>
+        <td><img src='<%= movie.image %>' class='img-responsive'></td>
         <td>
           <a href="/movies/<%= movie.id %>" class="btn btn-primary">Show</a>
           <a href="/movies/<%= movie.id %>/edit" class="btn btn-warning">Edit</a>
