--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -12,7 +12,7 @@
       <dd><%= @movie.director_id %></dd>
 
       <dt>Image</dt>
-      <dd><%= @movie.image %></dd>
+      <dd><img src="<%= @movie.image %>" class="img-responsive"></dd>
 
     </dl>
 
