--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= director.date_of_birth %></td>
         <td><%= director.name %></td>
-        <td><%= director.image %></td>
+        <td><img src='<%= director.image %>' class='img-responsive'></td>
         <td>
           <a href="/directors/<%= director.id %>" class="btn btn-primary">Show</a>
           <a href="/directors/<%= director.id %>/edit" class="btn btn-warning">Edit</a>
