--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,7 +18,13 @@
       <% @movies.each do |movie| %>
       <tr>
         <td><%= movie.title %></td>
-        <td><%= movie.director.created_at %></td>
+        <td>
+          <% if movie.director.present? %>
+            <a href="/directors/<%= movie.director.id %>">
+              <%= movie.director.created_at %>
+            </a>
+          <% end %>
+        </td>
         <td><img src='<%= movie.image %>' class='img-responsive'></td>
         <td>
           <a href="/movies/<%= movie.id %>" class="btn btn-primary">Show</a>
