--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -9,7 +9,13 @@
       <dd><%= @movie.title %></dd>
 
       <dt>Director</dt>
-      <dd><%= @movie.director_id %></dd>
+      <dd>
+        <% if @movie.director.present? %>
+          <a href="/directors/<%= @movie.director_id %>">
+            <%= @movie.director.created_at %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Image</dt>
       <dd><img src="<%= @movie.image %>" class="img-responsive"></dd>
